Set up feedback widget (#449)
* Set up feedback widget

* added expandability

* Removed need for expand animation

* remove unneeded code

* add community page with feedback widget

* update feedback widget with content and some styling changes

* Set up feedback widget

* added expandability

* Removed need for expand animation

* remove unneeded code

* add community page with feedback widget

* update feedback widget with content and some styling changes

* Update URLs for phase-4

* update copy

* fix link

* Update contributing.mdx

adding events section

* Update contributing.mdx

-changed contributing.md to caps
-updated 'propose new project' paragraph 
-scrapped last line in 'good first issue'

* test

* Update contributing.mdx

* Update contributing.mdx

* updated with fixed height

---------

Co-authored-by: Ebony Louis <55366651+EbonyLouis@users.noreply.github.com>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -165,10 +165,6 @@ main.col.col--7 article.margin-bottom--xl {
   padding-bottom: 5rem;
 }
 
-article {
-  padding: 2rem;
-}
-
 article p img {
   border: 2px solid var(--color-blue);
 }
@@ -500,4 +496,26 @@ footer a:hover {
     width: 375px;
     border: none !important;
   }
+}
+
+.expandable-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+
+.expand-btn {
+  transform: scaleY(-1);
+  padding: 0;
+  transition: 0.3s ease-in-out;
+  margin: auto;
+  padding: 1rem;
+}
+
+.expand-btn.expandable-content-expanded {
+  transform: scaleY(1);
+}
+
+.expandable-content-expanded {
+  max-height: 300px; /* Adjust this value based on the actual content height */
 }
