Revert "added Web5 hero section to dev home page (#462)"
This reverts commit 28b3ffa8e8bff16b434d9e00a901f7ddc0e314d4.

--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -53,19 +53,19 @@
   padding-right: 0.5714286em;
 }
 
-hr {
+.prose.prose-pink hr {
   height: 2px;
   border-width: 0;
   background-image: url('/static/img/divider-dotted-dark.svg');
 }
 
-hr.bg-dotted-dark {
+.prose.prose-pink hr.bg-dotted-dark {
   height: 2px;
   border-width: 0;
   background-image: url('/static/img/divider-dotted-dark.svg');
 }
 
-hr.bg-slash-dark {
+.prose.prose-pink hr.bg-slash-dark {
   height: 8px;
   border-width: 0;
   background-image: url('/static/img/divider-slash-dark.svg');
