--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -1,444 +1,518 @@
 /* Navbar and main */
 
 .docs-wrapper #__docusaurus a:not(.table-of-contents__link, .navbar__link) {
-    text-decoration: none;
-    font-weight: 600;
+  text-decoration: none;
+  font-weight: 600;
 }
 
 .docs-wrapper #__docusaurus {
-    --color-white: #c6c6c6;
+  --color-white: #c6c6c6;
 }
 .docs-wrapper #__docusaurus .navbar,
 .docs-wrapper #__docusaurus .main-wrapper {
-    max-width: unset;
+  max-width: unset;
 }
 
 .docs-wrapper #__docusaurus .main-wrapper {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 /* Sidebar */
 .docs-wrapper #__docusaurus aside .menu__list {
-    gap: 0;
+  gap: 0;
 }
 
-.docs-wrapper #__docusaurus aside .menu__list .menu__list-item .menu__link  {
-    font-weight: 500;
-    padding-block: 0.75rem;
-    color: var(--color-yellow);
-    text-decoration: none;
-    font-family: var(--tbd-font-mono);
-    letter-spacing: 0;
+.docs-wrapper #__docusaurus aside .menu__list .menu__list-item .menu__link {
+  font-weight: 500;
+  padding-block: 0.75rem;
+  color: var(--color-yellow);
+  text-decoration: none;
+  font-family: var(--tbd-font-mono);
+  letter-spacing: 0;
 }
 
-.docs-wrapper #__docusaurus aside .theme-doc-sidebar-item-link > .menu__link.menu__link--active,
-.docs-wrapper #__docusaurus aside .menu__list .menu__list-item-collapsible--active .menu__link--sublist.menu__link--active,
+.docs-wrapper
+  #__docusaurus
+  aside
+  .theme-doc-sidebar-item-link
+  > .menu__link.menu__link--active,
+.docs-wrapper
+  #__docusaurus
+  aside
+  .menu__list
+  .menu__list-item-collapsible--active
+  .menu__link--sublist.menu__link--active,
 .docs-wrapper #__docusaurus aside .menu__list-item-collapsible--active {
-    color: var(--color-black) !important;
-    background-color: var(--color-yellow);
+  background-color: var(--color-yellow);
+  color: var(--color-black) !important;
 }
 
-.docs-wrapper #__docusaurus aside .menu__list .menu__list-item-collapsible--active .menu__link--sublist.menu__link--active:hover,
-.docs-wrapper #__docusaurus aside .theme-doc-sidebar-item-category .menu__list-item-collapsible:hover .menu__link--sublist.menu__link--active {
-    color: var(--color-blue) !important;
+.docs-wrapper
+  #__docusaurus
+  aside
+  .menu__list
+  .menu__list-item-collapsible--active
+  .menu__link--sublist.menu__link--active:hover,
+.docs-wrapper
+  #__docusaurus
+  aside
+  .theme-doc-sidebar-item-category
+  .menu__list-item-collapsible:hover
+  .menu__link--sublist.menu__link--active {
+  color: var(--color-blue) !important;
 }
 
-.docs-wrapper #__docusaurus aside .theme-doc-sidebar-item-category .menu__list-item-collapsible:hover {
-    background-color: var(--ifm-menu-color-background-hover);
+.docs-wrapper
+  #__docusaurus
+  aside
+  .theme-doc-sidebar-item-category
+  .menu__list-item-collapsible:hover {
+  background-color: var(--ifm-menu-color-background-hover);
 }
-
 
 .docs-wrapper #__docusaurus aside .menu__list .menu__caret:before {
-    content: url('/img/arrow-blue.svg');
-    background: none;
+  content: url('/img/arrow-blue.svg');
+  background: none;
 }
 
 .docs-wrapper #__docusaurus aside .menu__list .menu__caret:before,
 .docs-wrapper #__docusaurus aside .menu__list .menu__link--sublist-caret:after {
-    filter: brightness(0) var(--color-primary-yellow-filter);
+  filter: brightness(0) var(--color-primary-yellow-filter);
 }
-.docs-wrapper #__docusaurus aside .menu__list .menu__list-item-collapsible--active .menu__caret:before {
-    filter: brightness(0);
+.docs-wrapper
+  #__docusaurus
+  aside
+  .menu__list
+  .menu__list-item-collapsible--active
+  .menu__caret:before {
+  filter: brightness(0);
 }
-.docs-wrapper #__docusaurus aside .menu__list .menu__list-item-collapsible:hover .menu__caret:before,
-.docs-wrapper #__docusaurus aside .menu__list .menu__link--sublist-caret:hover:after {
-    filter: none;
+.docs-wrapper
+  #__docusaurus
+  aside
+  .menu__list
+  .menu__list-item-collapsible:hover
+  .menu__caret:before,
+.docs-wrapper
+  #__docusaurus
+  aside
+  .menu__list
+  .menu__link--sublist-caret:hover:after {
+  filter: none;
 }
 
-.docs-wrapper #__docusaurus aside .menu__list .menu__list-item-collapsible:hover .menu__link.menu__link--sublist {
-    color: var(--color-blue);
+.docs-wrapper
+  #__docusaurus
+  aside
+  .menu__list
+  .menu__list-item-collapsible:hover
+  .menu__link.menu__link--sublist {
+  color: var(--color-blue);
 }
 
 .docs-wrapper #__docusaurus aside .menu__list .menu__caret:hover {
-    height: auto;
+  height: auto;
 }
 
 /* Submenu */
 
-.docs-wrapper #__docusaurus aside .menu__list .menu__list-item-collapsible--active ~ .menu__list {
-    margin: 0;
+.docs-wrapper
+  #__docusaurus
+  aside
+  .menu__list
+  .menu__list-item-collapsible--active
+  ~ .menu__list {
+  margin: 0;
 }
 
 .docs-wrapper #__docusaurus aside .menu__list-item-collapsible ~ .menu__list {
-    padding-left: 0;
-    margin: 0;
+  padding-left: 0;
+  margin: 0;
 }
 
-.docs-wrapper #__docusaurus aside .theme-doc-sidebar-item-category-level-1 .menu__list-item-collapsible ~ .menu__list .menu__link {
-    padding-left: 2.5rem;
+.docs-wrapper
+  #__docusaurus
+  aside
+  .theme-doc-sidebar-item-category-level-1
+  .menu__list-item-collapsible
+  ~ .menu__list
+  .menu__link {
+  padding-left: 2.5rem;
 }
 
-.docs-wrapper #__docusaurus aside .theme-doc-sidebar-item-category-level-2 .menu__list-item-collapsible ~ .menu__list .menu__link  {
-    padding-left: 3rem;
+.docs-wrapper
+  #__docusaurus
+  aside
+  .theme-doc-sidebar-item-category-level-2
+  .menu__list-item-collapsible
+  ~ .menu__list
+  .menu__link {
+  padding-left: 3rem;
 }
 
-.docs-wrapper #__docusaurus aside .theme-doc-sidebar-item-category-level-3 .menu__list-item-collapsible ~ .menu__list .menu__link  {
-    padding-left: 3.5rem;
+.docs-wrapper
+  #__docusaurus
+  aside
+  .theme-doc-sidebar-item-category-level-3
+  .menu__list-item-collapsible
+  ~ .menu__list
+  .menu__link {
+  padding-left: 3.5rem;
 }
 
 .docs-wrapper #__docusaurus footer {
-    border-top: 1px solid var(--ifm-toc-border-color);
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  border-top: 1px solid var(--ifm-toc-border-color);
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .docs-wrapper #__docusaurus footer > div {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .docs-wrapper #__docusaurus h1 ~ p,
 .docs-wrapper #__docusaurus h2:not(.theme-card h2, .community-card h2) ~ p,
 .docs-wrapper #__docusaurus h3:not(.theme-card h3, .community-card h3) ~ p,
 .docs-wrapper #__docusaurus p {
-    font-family: var(--tbd-font-mono);
-    letter-spacing: 0;
-    line-height: 1.75rem;
+  font-family: var(--tbd-font-mono);
+  letter-spacing: 0;
+  line-height: 1.75rem;
 }
 
-.docs-wrapper #__docusaurus p:not(.docs-section p, .alert p, .figure-container p, .api-card p) {
-    font-size: 1.125rem;
-    color: var(--color-white);
+.docs-wrapper
+  #__docusaurus
+  p:not(.docs-section p, .alert p, .figure-container p, .api-card p) {
+  font-size: 1.125rem;
+  color: var(--color-white);
 }
 
 .docs-wrapper #__docusaurus article .markdown li {
-    font-family: var(--tbd-font-mono);
-    letter-spacing: 0;
-    color: var(--color-white);
+  font-family: var(--tbd-font-mono);
+  letter-spacing: 0;
+  color: var(--color-white);
 }
 
 .docs-wrapper #__docusaurus .api-card {
-    border: 2px solid var(--color-yellow);
+  border: 2px solid var(--color-yellow);
 }
 
 .docs-wrapper #__docusaurus .api-card p {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .docs-wrapper #__docusaurus h2,
 .docs-wrapper #__docusaurus .primary-theme-card h2 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .docs-wrapper #__docusaurus .theme-card {
-    border-width: 2px;
+  border-width: 2px;
 }
 
 .docs-wrapper #__docusaurus .theme-card p:not(.primary-theme-card p) {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .docs-wrapper #__docusaurus .theme-card p {
-    max-width: 70%;
-    font-family: var(--tbd-font-mono);
-    letter-spacing: 0;
+  max-width: 70%;
+  font-family: var(--tbd-font-mono);
+  letter-spacing: 0;
 }
 
 .docs-wrapper #__docusaurus .theme-card img {
-    height: fit-content;
+  height: fit-content;
 }
 
 .docs-wrapper #__docusaurus .community-card h3 {
-    font-size: 1.25rem;
-    margin-bottom: 12px;
+  font-size: 1.25rem;
+  margin-bottom: 12px;
 }
 
 .docs-wrapper #__docusaurus .community-card p {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .docs-wrapper #__docusaurus .explore-card h3 {
-    font-size: 1rem;
-    margin-block: 0;
+  font-size: 1rem;
+  margin-block: 0;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition.alert {
-    border-radius: 0;
-    margin-bottom: 2rem;
+  border-radius: 0;
+  margin-bottom: 2rem;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition.alert code,
 .docs-wrapper #__docusaurus code:not(pre code, h4 code) {
-    background: #626262;
-    color: #fff;
+  background: #626262;
+  color: #fff;
 }
 
 .docs-wrapper #__docusaurus h4 > code {
-    background: #383838
+  background: #383838;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition.alert--info {
-    background: #0b1a1f;
+  background: #0b1a1f;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition.alert--secondary {
-    background: #3d3d3d;
+  background: #3d3d3d;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition.alert--secondary p,
 .docs-wrapper #__docusaurus .theme-admonition.alert--secondary p:last-child {
-    margin: 0;
+  margin: 0;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition p,
 .docs-wrapper #__docusaurus .theme-admonition li {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition p:last-child {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
-.docs-wrapper #__docusaurus .theme-admonition .admonitionHeading_node_modules-\@docusaurus-theme-classic-lib-theme-Admonition-styles-module {
-    margin-bottom: 1rem;
+.docs-wrapper
+  #__docusaurus
+  .theme-admonition
+  .admonitionHeading_node_modules-\@docusaurus-theme-classic-lib-theme-Admonition-styles-module {
+  margin-bottom: 1rem;
 }
 
 .docs-wrapper #__docusaurus .theme-admonition h2 {
-    font-size: 1.125rem;
-    color: var(--color-blue);
-    font-weight: 500;
-    margin-bottom: 0.75rem;
+  font-size: 1.125rem;
+  color: var(--color-blue);
+  font-weight: 500;
+  margin-bottom: 0.75rem;
 }
 
 .docs-wrapper #__docusaurus .docs-section {
-    margin-block-start: 6rem;
+  margin-block-start: 6rem;
 }
 
 .docs-wrapper #__docusaurus .docs-section code:not(pre code) {
-    background: #424242;
+  background: #424242;
 }
 
 .docs-wrapper #__docusaurus .docs-section h3 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .docs-wrapper #__docusaurus .docs-section h3:first-of-type {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .docs-wrapper #__docusaurus .docs-section h3:not(:first-of-type) {
-    margin-top: 4rem;
+  margin-top: 4rem;
 }
 
 .docs-wrapper #__docusaurus h4 {
-    font-size: 1.25rem;
-    margin-block-start: 2rem;
+  font-size: 1.25rem;
+  margin-block-start: 2rem;
 }
 
 .docs-wrapper #__docusaurus .docs-section h3 + p {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .docs-wrapper #__docusaurus .docs-section .theme-code-block pre {
-    margin-top: 0.75rem;
+  margin-top: 0.75rem;
 }
 
 .docs-wrapper #__docusaurus pre code {
-    border: 1px solid #212121;
-    background: #161616;
-    padding: 1.5rem 1rem;
-    line-height: 1.65;
+  border: 1px solid #212121;
+  background: #161616;
+  padding: 1.5rem 1rem;
+  line-height: 1.65;
 }
 
 .docs-wrapper #__docusaurus code:not(h4 > code) {
-    font-family: var(--tbd-font-mono);
-    letter-spacing: 0;
-    font-size: 0.9rem;
+  font-family: var(--tbd-font-mono);
+  letter-spacing: 0;
+  font-size: 0.9rem;
 }
 
 .docs-wrapper #__docusaurus details.alert--info > summary {
-    color: var(--color-blue);
-    font-weight: 600;
+  color: var(--color-blue);
+  font-weight: 600;
 }
 
 .docs-wrapper #__docusaurus details.alert--info p {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .docs-wrapper #__docusaurus .input-container {
-    margin-block: 1rem;
+  margin-block: 1rem;
 }
 
 .docs-wrapper #__docusaurus .input-container label {
-    display: block;
-    font-size: 0.75rem;
-    margin-bottom: 4px;
+  display: block;
+  font-size: 0.75rem;
+  margin-bottom: 4px;
 }
 
 .docs-wrapper #__docusaurus .input-container input {
-    padding: 0.5rem;
-    border-radius: 4px;
-    border: 1px solid #616161;
-    background: none;
-    width: 100%;
-    max-width: 400px;
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 1px solid #616161;
+  background: none;
+  width: 100%;
+  max-width: 400px;
 }
 
 .docs-wrapper #__docusaurus .input-container input:disabled {
-    opacity: 0.4;
+  opacity: 0.4;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container progress {
-    width: 32px;
-    height: 32px;
-    border: 4px solid #333333;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-    margin-left: 0.5rem;
-    }
+  width: 32px;
+  height: 32px;
+  border: 4px solid #333333;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin-left: 0.5rem;
+}
 
-    @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }  
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .docs-wrapper #__docusaurus .sandbox-container progress::-webkit-progress-bar {
-    background: transparent;
+  background: transparent;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 3rem;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container button {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container button:disabled {
-    cursor: default;
-    border: 2px solid transparent;
-    background: #262626;
-    color: #5a5a5a;
+  cursor: default;
+  border: 2px solid transparent;
+  background: #262626;
+  color: #5a5a5a;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container code,
 .docs-wrapper #__docusaurus .sandbox-container textarea {
-    background: none;
+  background: none;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container code .sandbox-placeholder {
-    color: grey;
+  color: grey;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container textarea {
-    resize: none;
-    font-family: var(--tbd-font-mono);
-    font-size: 0.85rem;
-    line-height: 1.75;
-    color: grey;
-    padding: 1rem;
+  resize: none;
+  font-family: var(--tbd-font-mono);
+  font-size: 0.85rem;
+  line-height: 1.75;
+  color: grey;
+  padding: 1rem;
 }
 
 .docs-wrapper #__docusaurus .sandbox-container .output {
-    flex: 1;
-    border: 1px solid #616161;
-    padding: 1rem;
-    background: #141414;
-    margin: 0;
-    border-radius: 0.25rem;
+  flex: 1;
+  border: 1px solid #616161;
+  padding: 1rem;
+  background: #141414;
+  margin: 0;
+  border-radius: 0.25rem;
 }
 
 .docs-wrapper #__docusaurus .figure-container {
-    margin-block: 3rem;
+  margin-block: 3rem;
 }
 
 .docs-wrapper #__docusaurus .figure-container p.copy {
-    margin-block: 1rem;
-    font-size: 0.875rem;
-    font-family: var(--tbd-font-mono);
-    letter-spacing: 0;
+  margin-block: 1rem;
+  font-size: 0.875rem;
+  font-family: var(--tbd-font-mono);
+  letter-spacing: 0;
 }
 
 @media screen and (max-width: 996px) {
-    .docs-wrapper #__docusaurus {
-        padding-inline: 0;
-    }
+  .docs-wrapper #__docusaurus {
+    padding-inline: 0;
+  }
 
-    .docs-wrapper #__docusaurus .navbar {
-        padding-top: 1.5rem;
-        padding-inline: 1rem;
-    }
+  .docs-wrapper #__docusaurus .navbar {
+    padding-top: 1.5rem;
+    padding-inline: 1rem;
+  }
 
-    .docs-wrapper #__docusaurus article {
-        padding: 2rem;
-    }
+  .docs-wrapper #__docusaurus article {
+    padding: 2rem;
+  }
 
-    .docs-wrapper #__docusaurus footer {
-        background: var(--color-black);
-    }
+  .docs-wrapper #__docusaurus footer {
+    background: var(--color-black);
+  }
 
-    .docs-wrapper #__docusaurus .theme-card {
-        gap: 0;
-        align-items: end;
-    }
+  .docs-wrapper #__docusaurus .theme-card {
+    gap: 0;
+    align-items: end;
+  }
 
-    .docs-wrapper #__docusaurus .theme-card p {
-        max-width: unset;
-    }
+  .docs-wrapper #__docusaurus .theme-card p {
+    max-width: unset;
+  }
 }
 
 @media screen and (min-width: 997px) {
-    .docs-wrapper #__docusaurus {
-        padding: 0;
-    }
+  .docs-wrapper #__docusaurus {
+    padding: 0;
+  }
 
-    .docs-wrapper #__docusaurus article {
-        padding: 4rem 8vw;
-    }
+  .docs-wrapper #__docusaurus article {
+    padding: 4rem 8vw;
+  }
 
-    .docs-wrapper #__docusaurus .navbar {
-        padding-left: 1.875rem;
-        position: sticky;
-        z-index: 999999;
-    }
+  .docs-wrapper #__docusaurus .navbar {
+    padding-left: 1.875rem;
+    position: sticky;
+    z-index: 999999;
+  }
 
-    .docs-wrapper #__docusaurus .docSidebarContainer_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module {
-        margin-top: 0;
-    }
+  .docs-wrapper
+    #__docusaurus
+    .docSidebarContainer_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module {
+    margin-top: 0;
+  }
 
-    .docs-wrapper #__docusaurus .sidebarViewport_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module {
-        position: sticky;
-        top: 77px;
-    }
+  .docs-wrapper
+    #__docusaurus
+    .sidebarViewport_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module {
+    position: sticky;
+    top: 77px;
+  }
 
-    .docs-wrapper #__docusaurus .sidebar_node_modules-\@docusaurus-theme-classic-lib-theme-DocSidebar-Desktop-styles-module {
-        padding-top: 0;
-    }
+  .docs-wrapper
+    #__docusaurus
+    .sidebar_node_modules-\@docusaurus-theme-classic-lib-theme-DocSidebar-Desktop-styles-module {
+    padding-top: 0;
+  }
 }
 
 .pagination-nav {
-    display: none;
+  display: none;
 }
-
 
 html.plugin-docs.plugin-id-default body,
 html.plugin-docs.plugin-id-default .navbar {
@@ -638,7 +712,7 @@ html.plugin-docs.plugin-id-default .table-of-contents__link--active code {
 }
 
 .docs-wrapper #__docusaurus .table-of-contents ul {
-    padding-inline-start: 1rem;
+  padding-inline-start: 1rem;
 }
 
 html.plugin-docs.plugin-id-default .table-of-contents a strong {
@@ -732,5 +806,5 @@ html.plugin-docs.plugin-id-default article .theme-card p {
 }
 
 .tbd-blue-illustration {
-    filter: var(--color-primary-cyan-filter);
+  filter: var(--color-primary-cyan-filter);
 }
