--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -98,6 +98,43 @@ button {
   --docusaurus-highlighted-code-line-bg: #ffed182e;
 }
 
+[data-theme='dark'] .DocSearch {
+  --docsearch-text-color: var(--ifm-font-color-base);
+  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
+  --docsearch-container-background: rgba(47, 55, 69, 0.7);
+  /* Modal */
+  --docsearch-modal-background: var(--ifm-background-color);
+  /* Search box */
+  --docsearch-searchbox-background: var(--ifm-background-color);
+  --docsearch-searchbox-focus-background: var(--ifm-color-black);
+  /* Hit */
+  --docsearch-hit-color: var(--ifm-font-color-base);
+  --docsearch-hit-active-color: var(--color-primary-cyan-filter);
+  --docsearch-hit-background: var(--ifm-color-emphasis-100);
+  /* Footer */
+  --docsearch-footer-background: var(--ifm-background-surface-color);
+  --docsearch-key-gradient: linear-gradient(
+    -26.5deg,
+    var(--ifm-color-emphasis-200) 0%,
+    var(--ifm-color-emphasis-100) 100%
+  );
+}
+
+[data-theme='dark'] .DocSearch-Hit[aria-selected='true'] a {
+  background-color: var(--ifm-menu-color-background-hover);
+}
+[data-theme='dark'] .DocSearch-Hit[aria-selected='true'] mark {
+  background-color: var(--ifm-menu-color-background-hover);
+  color: var(--ifm-color-primary) !important;
+}
+
+[data-theme='dark']
+  .DocSearch-Hit[aria-selected='true']
+  a
+  .DocSearch-Hit-Container {
+  color: var(--color-blue);
+}
+
 /* Horrible confusing code below */
 .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.1);
@@ -529,10 +566,22 @@ footer a:hover {
 }
 
 @keyframes wiggle {
-  0% { transform: rotate(0deg); }
-  20% { transform: rotate(-10deg); }
-  40% { transform: rotate(10deg); }
-  60% { transform: rotate(-10deg); }
-  80% { transform: rotate(10deg); }
-  100% { transform: rotate(0deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  20% {
+    transform: rotate(-10deg);
+  }
+  40% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(-10deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
