added a align-item for device width
Signed-off-by: captain-Akshay <akshay.sharma0503@gmail.com>

--- a/site/src/css/navbar.css
+++ b/site/src/css/navbar.css
@@ -158,6 +158,7 @@
     justify-content: space-between;
     display: flex;
     flex-direction: row-reverse;
+    align-items: center;
   }
 
   .navbar__toggle.clean-btn {
