added css for mobile version to improve the responsiveness of the site blog-menu
Signed-off-by: captain-Akshay <akshay.sharma0503@gmail.com>

--- a/site/src/css/docs.css
+++ b/site/src/css/docs.css
@@ -483,6 +483,12 @@
   .docs-wrapper #__docusaurus .theme-card p {
     max-width: unset;
   }
+  .navbar-sidebar__item.menu{
+    margin-bottom: 100px;
+  }
+  .navbar-sidebar__item.menu .menu__list {
+    padding-right: 100px;
+  }
 }
 
 @media screen and (min-width: 997px) {
