fixed vertical scrolling of mobile docs menu
Co-authored-by: captain-Akshay <captain-Akshay@users.noreply.github.com>

--- a/site/src/css/navbar.css
+++ b/site/src/css/navbar.css
@@ -286,6 +286,10 @@
   top: -6px;
 }
 
+.navbar-sidebar__item.menu{
+  margin-bottom: 100px;
+}
+
 aside .menu__link:not(.docs-wrapper .menu__link) {
   color: gray !important;
   padding-top: 0rem;
