--- a/site/src/css/docs.css
+++ b/site/src/css/docs.css
@@ -838,3 +838,25 @@ html.plugin-docs.plugin-id-default article .theme-card p {
 .markdown > h3 {
   font-size: 1.5rem;
 }
+
+.language-switch-header {
+  text-align: right;
+  margin-bottom: 10px; 
+}
+
+.language-switcher-select {
+  width: auto;
+  font-size: 16px;
+  color: #000;
+  font-weight: bold;
+  background-color: #ffec19;
+  margin-left: 15px;
+  padding: 5px;
+}
+
+.languageTabs {
+  display: flex;
+  justify-content: flex-start;
+  cursor: pointer;
+  margin: 0;
+}
